collate of the codes

--- a/aver0214.md
+++ b/aver0214.md
@@ -1,4 +1,5 @@
 # aver0214
+###### /src/main/java/seedu/address/logic/commands/AddQuickCommand.java
 ``` java
             model.sortAllPersons();
             model.sortImportantTag();
@@ -9,6 +10,7 @@
             throw new CommandException(MESSAGE_PERSON_NOT_FOUND);
         }
 ```
+###### /src/main/java/seedu/address/logic/commands/FindSpecificCommand.java
 ``` java
 /**
  * Finds and lists all persons in address book who contain any of the specified argument keywords.
@@ -37,6 +39,7 @@ public class FindSpecificCommand extends Command {
         return new CommandResult(getMessageForPersonListShownSummary(model.getFilteredPersonList().size()));
     }
 ```
+###### /src/main/java/seedu/address/logic/commands/ListCommand.java
 ``` java
     @Override
     public CommandResult execute() throws CommandException {
@@ -57,6 +60,7 @@ public class FindSpecificCommand extends Command {
         this.model.sortImportantTag();
     }
 ```
+###### /src/main/java/seedu/address/logic/parser/AddQuickCommandParser.java
 ``` java
         if (!arePrefixesPresent(argMultimap, PREFIX_NAME, PREFIX_PHONE)) {
             throw new ParseException(String.format(MESSAGE_INVALID_COMMAND_FORMAT, AddQuickCommand.MESSAGE_USAGE));
@@ -79,6 +83,7 @@ public class FindSpecificCommand extends Command {
 
             return new AddQuickCommand(person);
 ```
+###### /src/main/java/seedu/address/logic/parser/AddQuickCommandParser.java
 ``` java
     /**
      * Returns a non-null {@code Optional <String>} object
@@ -99,14 +104,17 @@ public class FindSpecificCommand extends Command {
         return value;
     }
 ```
+###### /src/main/java/seedu/address/logic/parser/AddressBookParser.java
 ``` java
         case AddQuickCommand.COMMAND_WORD:
             return new AddQuickCommandParser().parse(arguments);
 ```
+###### /src/main/java/seedu/address/logic/parser/AddressBookParser.java
 ``` java
         case FindSpecificCommand.COMMAND_WORD:
             return new FindSpecificCommandParser().parse(arguments);
 ```
+###### /src/main/java/seedu/address/logic/parser/FindSpecificCommandParser.java
 ``` java
     /**
      * Parses the given {@code String} of arguments in the context of the FindSpecificCommand
@@ -146,6 +154,7 @@ public class FindSpecificCommand extends Command {
         }
     }
 ```
+###### /src/main/java/seedu/address/model/Model.java
 ``` java
     /** Sort the contacts with import tag to the top. */
     void sortImportantTag () throws PersonNotFoundException, DuplicatePersonException;
@@ -153,6 +162,7 @@ public class FindSpecificCommand extends Command {
     /** Sort the contacts in ascending alphabetical order. */
     void sortAllPersons() throws DuplicatePersonException;
 ```
+###### /src/main/java/seedu/address/model/ModelManager.java
 ``` java
     @Override
     public void deleteTag(Tag tag) throws PersonNotFoundException, DuplicatePersonException {
@@ -168,6 +178,7 @@ public class FindSpecificCommand extends Command {
     }
 
     @Override
+    public void sortImportantTag() throws PersonNotFoundException, DuplicatePersonException {
         ArrayList<ReadOnlyPerson> notImportantPersons = new ArrayList<ReadOnlyPerson>();
         ArrayList<ReadOnlyPerson> importantPersons = new ArrayList<ReadOnlyPerson>();
 
@@ -210,6 +221,8 @@ public class FindSpecificCommand extends Command {
         toBeSortedPersonList.addAll(addressBook.getPersonList());
         Collections.sort(toBeSortedPersonList, new NameComparator());
 
+        AddressBook newAb = new AddressBook();
+
         for (int j = 0; j < toBeSortedPersonList.size(); j++) {
             newAb.addPerson(toBeSortedPersonList.get(j));
         }
@@ -220,6 +233,7 @@ public class FindSpecificCommand extends Command {
         indicateAddressBookChanged();
     }
 ```
+###### /src/main/java/seedu/address/model/person/EmailContainsSpecifiedKeywordsPredicate.java
 ``` java
     @Override
     public boolean test(ReadOnlyPerson person) {
@@ -227,6 +241,7 @@ public class FindSpecificCommand extends Command {
                 .anyMatch(keyword -> StringUtil.containsWordIgnoreCase(person.getEmail().value, keyword));
     }
 ```
+###### /src/main/java/seedu/address/model/person/NameComparator.java
 ``` java
 package seedu.address.model.person;
 
@@ -243,6 +258,7 @@ public class NameComparator implements Comparator <ReadOnlyPerson> {
     }
 }
 ```
+###### /src/main/java/seedu/address/model/person/PhoneContainsSpecifiedKeywordsPredicate.java
 ``` java
     @Override
     public boolean test(ReadOnlyPerson person) {
@@ -250,6 +266,7 @@ public class NameComparator implements Comparator <ReadOnlyPerson> {
                 .anyMatch(keyword -> StringUtil.containsWordIgnoreCase(person.getPhone().value, keyword));
     }
 ```
+###### /src/main/java/seedu/address/model/person/TagContainsSpecifiedKeywordsPredicate.java
 ``` java
     @Override
     public boolean test(ReadOnlyPerson person) {
@@ -260,6 +277,7 @@ public class NameComparator implements Comparator <ReadOnlyPerson> {
                 .anyMatch(keyword -> tagList.stream().anyMatch(tagname -> keyword.contains(tagname.toString())) & true);
     }
 ```
+###### /src/test/java/seedu/address/logic/parser/AddQuickCommandParserTest.java
 ``` java
     @Test
     public void parse_compulsoryFieldMissing_failure() {
@@ -279,6 +297,7 @@ public class NameComparator implements Comparator <ReadOnlyPerson> {
                 + VALID_EMAIL_BOB + VALID_ADDRESS_BOB + VALID_ADDRESS_BOB, expectedMessage);
     }
 ```
+###### /src/test/java/systemtests/AddQuickCommandSystemTest.java
 ``` java
         /* Case: missing email -> added */
         expectedResultMessage = AddQuickCommand.MESSAGE_SUCCESS;
