--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -361,6 +361,142 @@ image::UndoRedoActivityDiagram.png[width="200"]
 
 <<<
 
+=== Group Feature
+The group feature enables users to create and delete a group in Circles. It is stored as a `Group` object which contains
+a `GroupName`, which stores the group name, and a `List<ReadOnlyPerson>` which stores the group members. +
+
+A `Group` object is stored in the `UniqueGroupList` inside the `AddressBook` class. The `UniqueGroupList` does not allow duplicate groups that have the same name in Circles.
+Otherwise, it will throw a `DuplicateGroupException`. +
+
+==== Creating a group
+To create a group in Circles, the user will enter the following command: `creategroup n/GROUP_NAME i/INDEXES...`. +
+GROUP_NAME will be the name of the group, and INDEXES are the indexes of the persons that you want to add into the group. +
+
+
+Firstly, when a `creategroup` command has been entered in the Command Box, it enters the `CreateGroupCommandParser` class, which parses the arguments into a `GroupName` and a `List<Index>`,
+containing the indexes of the persons that is being added to the group. +
+The sequence diagram for `CreateGroupCommandParser` is shown below.
+
+image::CreateGroupCommandParserSequenceDiagram.png[width="800"]
+
+Next, the `CreateGroupCommand` class will take in the parameters parsed by `CreateGroupCommandParser`, and use the list of indexes to add the person corresponding to the index into a List<ReadOnlyPerson>.
+A person will only be added to the group once, even if an index has been repeated more than once in the list. +
+
+Then, a new `Group` will be created, and the `addGroup()` method in `Model` will add the group into Circles.
+The code implementation is shown below, and is accessible in link: {repoURL}/src/main/java/seedu/address/logic/commands/CreateGroupCommand.java[`CreateGroupCommand.java`] +
+[source,java]
+----
+    public CommandResult executeUndoableCommand() throws CommandException {
+        requireNonNull(model);
+        List<ReadOnlyPerson> lastShownList = model.getFilteredPersonList();
+        List<ReadOnlyPerson> groupMembers = new ArrayList<>();
+
+        for (Index index: indexes) {
+            if (index.getZeroBased() >= lastShownList.size()) {
+                throw new CommandException(Messages.MESSAGE_INVALID_PERSON_DISPLAYED_INDEX);
+            }
+
+            ReadOnlyPerson personToAdd = lastShownList.get(index.getZeroBased());
+            if (!groupMembers.contains(personToAdd)) {
+                groupMembers.add(personToAdd);
+            }
+        }
+        ReadOnlyGroup newGroup = new Group(groupName, groupMembers);
+        try {
+            model.addGroup(newGroup);
+        } catch (DuplicateGroupException dge) {
+            throw new CommandException(MESSAGE_DUPLICATE_GROUP);
+        }
+        model.updateFilteredGroupList(Model.PREDICATE_SHOW_ALL_GROUPS);
+
+        return new CommandResult(String.format(MESSAGE_SUCCESS, groupName, groupMembers.size()));
+    }
+----
+
+Finally, `Model` will call the `addGroup()` method in `AddressBook` to add the group into the `UniqueGroupList`.
+The `addGroup()` method will then call the `add()` method in `UniqueGroupList`, which will check for duplicate groups in Circles.
+Any group that have the same name will be considered as duplicates. If a duplicate group has been found, a `DuplicateGroupException` error will be thrown, and the group will not be added into Circles.
+Otherwise, the group will be successfully added into Circles.
+This method is shown below, and can be found in {repoURL}/src/main/java/seedu/address/model/group/UniqueGroupList.java[`UniqueGroupList.java`]
+[source,java]
+----
+    public void add(ReadOnlyGroup toAdd) throws DuplicateGroupException {
+        requireNonNull(toAdd);
+        if (contains(toAdd)) {
+            throw new DuplicateGroupException();
+        }
+        internalList.add(new Group(toAdd));
+    }
+----
+
+===== Design Considerations
+*Aspect:* Implementation of the `Group` feature +
+*Alternative 1 (current choice):* Create a Group class to store the persons into a group +
+*Pros:* Creating a separate class called `Group` will look more professional, and allows an additional UI panel to show to list of groups. Enhances the user experience.  +
+*Cons:* Hard to implement, and higher risk for bugs in the application. +
+
+*Alternative 2:* Create a tag for the group +
+*Pros:* Short and easy solution to implement a group, and users can just use the `list tags` command to show the specific groups +
+*Cons:* It violates the Single Responsibility Principle as tags are now being used for two different things, labels for the person as well as groups.
+
+*Aspect:* Handling of group members inside `Group`+
+*Alternative 1 (current choice):* Create a `List<ReadOnlyPerson>` inside `Group` to store the group members +
+*Pros:* Easy to implement, changes in the person list inside Circles will not affect the `Group`. Less coupling.+
+*Cons:* Deleting of contacts in Circles will not reflect in the list inside the `Group`. +
+
+*Alternative 2:* Link the group members to the `UniquePersonList` in `AddressBook`
+*Pros:* Any changes to the contacts list will be updated immediately into the groups.
+*Cons:* It will be harder to implement, and will result in more coupling.
+
+<<<
+
+==== Deleting a group
+To delete a group in Circles, the user will enter `deletegroup INDEX`, where INDEX is the index of the group in the group list panel. +
+
+Firstly, when a `deletegroup` command is entered in the Command Box, it enters the `DeleteGroupCommandParser` class, which parses the index of the group that is going to be deleted.
+The sequence diagram for `DeleteGroupCommandParser` is shown below.
+
+image::DeleteGroupCommandParserSequenceDiagram.png[width="800"]
+
+Next, the `DeleteGroupCommand` class will take in the `Index` that is parsed by `DeleteGroupCommandParser` and calls the `deleteGroup()` method in `Model`.
+The code implementation is shown below, and can be found in {repoURL}/src/main/java/seedu/address/logic/commands/DeleteGroupCommand.java[`DeleteGroupCommand.java`]
+[source,java]
+----
+    public CommandResult executeUndoableCommand() throws CommandException {
+
+        List<ReadOnlyGroup> lastShownList = model.getGroupList();
+
+        if (targetIndex.getZeroBased() >= lastShownList.size()) {
+            throw new CommandException(Messages.MESSAGE_INVALID_PERSON_DISPLAYED_INDEX);
+        }
+
+        ReadOnlyGroup groupToDelete = lastShownList.get(targetIndex.getZeroBased());
+        try {
+            model.deleteGroup(groupToDelete);
+        } catch (GroupNotFoundException gnfe) {
+            assert false : "The target group cannot be missing";
+        }
+
+        return new CommandResult(String.format(MESSAGE_DELETE_GROUP_SUCCESS, groupToDelete.getGroupName().fullName));
+    }
+----
+
+Finally, `Model` will call the `deleteGroup()` method in `AddressBook`, which will then call the `delete()` method in `UniqueGroupList` which will delete the group from Circles.
+If the group cannot be found inside the `UniqueGroupList`, it will throw a `GroupNotFoundException` error to the user. This method is shown below, and can be found in
+{repoURL}/src/main/java/seedu/address/model/group/UniqueGroupList.java[`UniqueGroupList.java`]
+[source,java]
+----
+    public boolean remove(ReadOnlyGroup toRemove) throws GroupNotFoundException {
+        requireNonNull(toRemove);
+        final boolean groupFoundAndDeleted = internalList.remove(toRemove);
+        if (!groupFoundAndDeleted) {
+            throw new GroupNotFoundException();
+        }
+        return groupFoundAndDeleted;
+    }
+----
+
+
 === Enhanced Find Command
 
 The enhanced `find` command now allows searches for a Person's Name, Phone Number, Email, Address and Tags. It uses the
