--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -67,8 +67,8 @@ A person can have any number of tags (including 0)
 
 Examples:
 
-* `add n/John Doe p/98765432 e/johnd@example.com a/John street, block 123, #01-01`
-* `add n/Betsy Crowe t/friend e/betsycrowe@example.com a/Newgate Prison p/1234567 t/criminal`
+* `add n/John Doe p/98765432 b/21/07/1991 e/johnd@example.com a/John street, block 123, #01-01`
+* `add n/Betsy Crowe t/friend e/betsycrowe@example.com a/Newgate Prison b/21/07/1991 p/1234567 t/criminal`
 
 === Listing all persons : `list`
 
@@ -78,7 +78,7 @@ Format: `list`
 === Editing a person : `edit`
 
 Edits an existing person in the address book. +
-Format: `edit INDEX [n/NAME] [p/PHONE] [e/EMAIL] [a/ADDRESS] [t/TAG]...`
+Format: `edit INDEX [n/NAME] [p/PHONE] [b/BIRTHDAY] [e/EMAIL] [a/ADDRESS] [t/TAG]...`
 
 ****
 * Edits the person at the specified `INDEX`. The index refers to the index number shown in the last person listing. The index *must be a positive integer* 1, 2, 3, ...
@@ -348,6 +348,12 @@ Contacts in user myBook app that has `Important` or `important` tag will always 
 User using versions before v1.2 should add a new person with `important` tag first to enjoy this feature.
 
 === Since `v1.3`
+
+==== Add Birthday
+
+All persons can now add in their birthday on the command line
+Format `b/dd/mm/yyyy` allow Mybook to keep track all students birthday
+Easy to identify who's birthday is coming up on that month.
 
 ==== Sorted Contacts
 
