--- a/docs/team/Jolyn.adoc
+++ b/docs/team/Jolyn.adoc
@@ -15,7 +15,7 @@ include::../../README.adoc[tag=applicationDescription]
 The table below shows the keyboard shortcuts that are added, with the exception of shortcuts with the behavior `Exit the application`
 and `View help window` which came with the original state of the application.
 
-==== External behavior
+==== External Behavior
 
 ---
 
@@ -37,13 +37,35 @@ include::../DeveloperGuide.adoc[leveloffset=2, tag=shortcut]
 
 ---
 
+=== Enhancement Added: Person Detail Panel
+
+==== External Behavior
+
+---
+
+---
+
+==== Justification
+
+---
+
+---
+
+==== Implementation
+
+---
+
+include::../DeveloperGuide.adoc[leveloffset=2, tag=detailPanel]
+
+---
+
 === Enhancement Added: Remark Field
 
 The remark field allows the user to store miscellaneous notes about their contacts. The field can be added using a standalone `remark` command,
 or added along with other fields when adding a new person using the existing `add` command. Similarly, the field can be modified with the `remark` command,
 or edited along with other fields using the existing `edit` command.
 
-==== External behavior
+==== External Behavior
 
 ---
 
