--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -329,7 +329,7 @@ The `redo` command fails as there are no `undo` commands executed previously.
 If you want your contact names to be displayed in neat and tidy order, you may do so with the sort command. Which sorts the contact list by name. +
 Format: `sort` or `ss`
 
-[[filtertag]]
+// tag::filtertag[]
 === Filtering list by tags : `tag`
 (added in v1.2)
 
@@ -350,6 +350,9 @@ Returns any person having tags `friends` or `bestFriends`
 * `t friends classmates colleagues` +
 Returns any person having tags `friends`, `classmates`, or `colleagues`
 
+// end::filtertag[]
+
+// tag::removetag[]
 === Removing tags : `rtag`
 (added in v1.2)
 
@@ -369,6 +372,8 @@ Removes "friends" tag from all persons
 * `rt friends classmates colleagues` +
 Removes "friends", "classmates", "colleagues" tag from all persons
 
+// end::removetag[]
+
 === Importing Contacts from external source : `import`
 (added in v1.2)
 
@@ -387,6 +392,7 @@ File will be exported onto the main folder as `output.vcf`
 
 Format: `export` or `ex`
 
+// tag::uploadphoto[]
 === Upload photo image for a contact : `photo`
 (added in v1.3)
 
@@ -418,6 +424,7 @@ Opens file explorer and uploads photo to the 1st person in the address book.
 * `photo 2 C:\Users\Pictures\photo.jpg` +
 * `p 2 C:\Users\Pictures\photo.jpg` +
 Uploads photo of specified image file path to the 2nd person in the address book.
+// end::uploadphoto[]
 
 === Clearing all entries : `clear`
 
@@ -547,8 +554,11 @@ This section answers some common questions that you may have. If you have any mo
 *Q*: How do I transfer my data to another Computer? +
 *A*: Install the app in the other computer and overwrite the empty data file it creates with the file that contains the data of your previous Address Book folder.
 
+// tag::colourtheme[]
+
 *Q*: How do I change the theme? +
 *A*: Click on the `File` drop down menu on the top left hand corner of the screen. A drop down menu appears. Click on the theme you want to apply.
+// end::colourtheme[]
 
 == Command Summary
 [width="59%",cols="22%,<40%,<40%,options="header",]
