--- a/docs/team/seejiaminjasmine.adoc
+++ b/docs/team/seejiaminjasmine.adoc
@@ -32,9 +32,7 @@ include::../UserGuide.adoc[tag=filtertag]
 
 ==== Justification
 
-{Justify the need for, and the current design (i.e. external behavior) of, the feature}
-
-ConnectUs aims to give convenience while being user-friendly. By having a feature to filter the contacts based on the tags,
+ConnectUs aims to give convenience and efficiency while being user-friendly. By having a feature to filter the contacts based on the tags,
 it can speed up the process of searching for the contact and save precious time especially when there are many contacts in the application. +
 The feature is executed by typing `tag KEYWORD [MORE_KEYWORDS]` on the command line to make it simple and user-friendly for the user to use.
 The command allows multiple keywords of the tag names to give the users the flexibility to optimise their search.
@@ -64,8 +62,6 @@ include::../UserGuide.adoc[tag=removetag]
 ---
 
 ==== Justification
-
-{Justify the need for, and the current design (i.e. external behavior) of, the feature}
 
 In terms of tag features, ConnectUs only had the ability to add and edit the tags of a contact. If the user wanted to remove a specific tag, he/she would have to
 go and edit all the contacts that has the relevant tag to remove it. Hence, this feature allows the user to remove the specific tag from all contacts without
@@ -103,7 +99,7 @@ This feature was added to allow users to personalize the application by changing
 Some users may want to feel more familiar with the application or they may want a design change once in a while. This feature can help cater to these users. +
 The theme can be changed by clicking on the `File` drop down menu and selecting the theme. This is to make it user-friendly and
 easier for users to change the colour theme as the colour themes are all listed in the menu and they can directly change the colour theme by simply clicking instead of
-having to type in the command line and searching for what available colour themes are there.
+having to type in the command line and searching for what available colour themes there are.
 
 ==== Implementation
 
