--- a/docs/team/jeremychan.adoc
+++ b/docs/team/jeremychan.adoc
@@ -3,14 +3,15 @@
 :toc-title:
 :toc-section:
 
-= Project: DeathNote
+== Project: DeathNote
+
 DeathNote is a desktop address book application used for teaching Software Engineering principles. The user interacts with it using a CLI, and it has a GUI created with JavaFX. It is written in Java, and has about 6 kLoC.
 
 *Code contributed*: [https://github.com/Jemereny/addressbook-level4/blob/master/collated/main/Jemereny.md[Functional code]] [https://github.com/Jemereny/addressbook-level4/blob/master/collated/test/Jemereny.md[Test code]]
 
 == Enhancement Added: Profile Picture
 
-==== External behavior
+=== External behavior
 
 ---
 #Start of Extract https://github.com/CS2103AUG2017-W10-B3/DeathNote/blob/master/docs/UserGuide.adoc[from: User Guide]#
@@ -21,10 +22,11 @@ include::../UserGuide.adoc[tag=alias]
 
 ---
 
-==== Justification
+=== Justification
+
 ---
 
-==== Implementation
+=== Implementation
 
 ---
 #Start of Extract [from: Developer Guide]#
@@ -35,7 +37,7 @@ include::../UserGuide.adoc[tag=alias]
 
 == Enhancement Added: Themes
 
-==== External behavior
+=== External behavior
 
 ---
 #Start of Extract https://github.com/CS2103AUG2017-W10-B3/DeathNote/blob/master/docs/UserGuide.adoc[from: User Guide]#
@@ -46,10 +48,11 @@ include::../UserGuide.adoc[tag=openbook]
 
 ---
 
-==== Justification
+=== Justification
+
 ---
 
-==== Implementation
+=== Implementation
 
 ---
 #Start of Extract [from: Developer Guide]#
@@ -60,7 +63,7 @@ include::../UserGuide.adoc[tag=openbook]
 
 == Enhancement Added: Website
 
-==== External behavior
+=== External behavior
 
 ---
 #Start of Extract https://github.com/CS2103AUG2017-W10-B3/DeathNote/blob/master/docs/UserGuide.adoc[from: User Guide]#
@@ -71,10 +74,11 @@ include::../UserGuide.adoc[tag=openbook]
 
 ---
 
-==== Justification
+=== Justification
+
 ---
 
-==== Implementation
+=== Implementation
 
 ---
 #Start of Extract [from: Developer Guide]#
@@ -85,7 +89,7 @@ include::../UserGuide.adoc[tag=openbook]
 
 == Enhancement Added: Colors for tags
 
-==== External behavior
+=== External behavior
 
 ---
 #Start of Extract https://github.com/CS2103AUG2017-W10-B3/DeathNote/blob/master/docs/UserGuide.adoc[from: User Guide]#
@@ -96,10 +100,11 @@ include::../UserGuide.adoc[tag=openbook]
 
 ---
 
-==== Justification
+=== Justification
+
 ---
 
-==== Implementation
+=== Implementation
 
 ---
 #Start of Extract [from: Developer Guide]#
@@ -110,7 +115,7 @@ include::../UserGuide.adoc[tag=openbook]
 
 == Enhancement Added: Shown list to be sorted
 
-==== External behavior
+=== External behavior
 
 ---
 #Start of Extract https://github.com/CS2103AUG2017-W10-B3/DeathNote/blob/master/docs/UserGuide.adoc[from: User Guide]#
@@ -121,10 +126,11 @@ include::../UserGuide.adoc[tag=openbook]
 
 ---
 
-==== Justification
+=== Justification
+
 ---
 
-==== Implementation
+=== Implementation
 
 ---
 #Start of Extract [from: Developer Guide]#
