--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -423,6 +423,7 @@ By keying in the command word `recentlyDel`, the command word will be detected i
 We will now create a `LinkedList<Person> RecentlyDeletedQueue = new LinkedList<>();` to store the recently deleted contacts for up to the past 30 contacts.
 In the `RecentlyDeletedCommand` class, the `commandResult` method is used which will show the deleted contacts.
 
+// tag::remark[]
 === Remark Command
 
 Remark command lets the user enter an additional field of text to a specific contact in the Address Book. Remark command extends undo to allow user to undo the changes made to the remark.
@@ -443,9 +444,19 @@ public class RemarkCommandParser implements Parser<RemarkCommand> {
     }
 }
 ----
+// end::remark[]
 
-=== Sort Command
+// tag::sort[]
+=== Sorting mechanism
 
+The sort mechanism is done first by comparing the names of every contact in the address book in lower case.
+
+Sort extends command which makes it an undoable command.
+
+Sort command can only be executed only if the person list is not empty.
+
+It uses the sort method from the collection class to sort the array list of persons in the address book.
+// end::sort[]
 
 === Logging
 
