--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -275,6 +275,7 @@ deletes the contacts with the 2nd, 4th, 7th and 8th indexes in the address book.
 
 ****
 
+// tag::remark[]
 === Add remark to a person
 
 Adds a remark to an existing person in the address book.
@@ -293,11 +294,14 @@ adds the remark "owes money" to person of index 1 in the address book.
 
 * `remark 4 r/' +
 removes any remark from the person of index 4 in the address book.
+// end::remark[]
 
+// tag::sort[]
 === Sort
 
 Sorts the contacts in the address book in alphabetical order
 Format: sort
+// end::sort[]
 
 === Add photos : (Coming in v1.5)
 
