--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -489,7 +489,8 @@ image::facebook_post_sequence_diagram.png[width="800"]
 ---
 // end::facebook[]
 
-=== Social Info
+// tag::social-media-accounts[]
+=== Social Media Accounts
 
 Information about contact's social media accounts are encapsulated by the `SocialInfo` class. The list of `SocialInfo` associated
 with a `Person` is handled by the `UniqueSocialInfoList`, which guarantees that at most one of each type of social media type is
@@ -500,7 +501,7 @@ The following class diagram represents the relationship between the `Person`, `U
 .Class diagram representing relationships between Person, UniqueSocialInfoList and SocialInfo classes
 image::SocialInfoClassDiagram.png[width="800"]
 
-==== Parsing
+==== Parsing inputs representing social media accounts
 
 The form `SOCIAL_TYPE_IDENTIFIER USERNAME` is used to represent a `SocialInfo` as a CLI parametr for a command,
 A Collection of these raw social info parameters can then be passed to the `parseSocialInfo` method in the `SocialInfoMapping` class for parsing.
@@ -516,7 +517,7 @@ The url structures for social media platforms are an external dependency that we
 inevitable that some issues will inevitably arise due to changes in these external dependencies.
 It is hence essential to isolate the logic pertaining to the generation of these urls so that any issues can easily be identified and resolved.
 
-==== Adding new social platforms
+==== Adding support for new social media platforms
 
 Handling for parsing inputs for new social platforms should be done by adding the following methods to the `SocialInfoMapping` class.
 
@@ -590,7 +591,9 @@ Additional space required to support storing the HashSets in memory. +
 **Additional Info:** Number of social platforms is expected to be a reasonable amount, and thus should not cause much noticable delay.
 In comparison, the startup delay may be more significant when a large number of contacts are present in the address book. Thus the first
 alternative was selected to provide a more pleasant user experience.
+// end::social-media-accounts[]
 
+// tag::command-syntax[]
 === Command Options
 
 As some functionalities have similar behaviours, we group them under a single `COMMAND_WORD` and allow the user to include
@@ -635,6 +638,8 @@ that this approach was less intuitive to them compared to the approach described
 **Alternative 3:** Have separate `COMMAND_WORDS` for each command. +
 **Pros:** Simple syntax, with no confusion over what behaviour will be executed. +
 **Cons:** Does not scale well as users have to remember many different commands as the number of features grow.
+
+// end::command-syntax[]
 
 === Favorite Contacts
 
@@ -729,6 +734,7 @@ After getting the copy of the person e.g. `personToFavorite`, it is easy to call
 **Pros:** Easier implementation +
 **Cons:** User would have to remember more commands and their usages
 
+// tag::sort[]
 === Sorting Contacts
 To make it easier for users to find contacts, the displayed person list is kept sorted. Users can specify how contacts
 are to be ordered in the list using the `sort` command.
@@ -754,6 +760,7 @@ image::SortObserverClassDiagram.png[width="800"]
 as there is no need to maintain any additional data structures. +
 **Cons:** Every sort operation will require writing to the data file, which requires IO operations that are slower compared
 to in-memory operations.
+// end::sort[]
 
 === Logging
 
